<resources>
    <string name="app_name">AI.yam</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="google">Google</string>
    <string name="create_your_account">Create your account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="notification_settings_title"> Notification Settings</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="email_notifications">Email Notifications</string>

    <string name="home">Home</string>
    <string name="alerts">Alerts</string>
    <string name="detail">Detail</string>
    <string name="upload">Upload</string>
    <string name="profile">Profile</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <!-- Auth -->
    <string name="signup">Register</string>
    <string name="login">Sign In</string>
    <string name="logout">Sign Out</string>

    <string name="title_signup_page">New here?</string>
    <string name="message_signup_page">Please fill out this form to continue</string>
    <string name="message_signup_page_sign_in">Already have an account? Sign In</string>

    <string name="title_login_page">Welcome Back!</string>
    <string name="message_login_page">Lets log back in to your account</string>
    <string name="message_login_page_sign_up">Don\'t have an account? Sign Up</string>

    <string name="greeting">Halo %1$s,</string>
    <string name="email_hint">example@google.com</string>
    <string name="description">Description</string>

    <!-- Confirmation -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to leave?</string>
    <string name="confirmation">Sign Out</string>
    <string name="name">Full Name</string>
    <string name="username">Username</string>
    <string name="phone">08222222222</string>
    <string name="change">Change</string>
    <string name="back">Back</string>
    <string name="date">1 Januari 2023</string>
    <string name="dead_count">Dead Chicken</string>
    <string name="chicken_info">Chicken Information</string>
    <string name="live_count">Living Chicken</string>
    <string name="crowding">Crowd Density</string>
    <string name="chicken_count">Chicken Count</string>
    <string name="_32">32</string>
    <string name="_10_20">10:20</string>
    <string name="telegram_alert">Telegram Alert</string>
    <string name="phone_number">82124622976</string>
    <string name="history">History</string>
    <string name="phone_label">Telegram and Whatsapp Alerts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- onboarding -->
    <string name="jud1">Peternakan Lebih Efisien</string>
    <string name="des1">Kelola peternakan ayam Anda dengan teknologi cerdas. Gunakan kamera ponsel untuk memindai ayam, mengidentifikasi jumlah yang mati, dan memastikan kesehatan ternak Anda tetap terpantau. Peternakan Anda layak mendapatkan solusi terbaik!</string>
    <string name="jud2">Ambil Foto, Dapatkan Data</string>
    <string name="des2">Cukup foto ayam Anda, dan biarkan AI.YAM bekerja untuk Anda. Dengan deteksi berbasis AI, Anda bisa langsung mengetahui jumlah ayam yang terpantau, jumlah kematian, dan statistik penting lainnya. Lebih cepat, lebih cerdas, lebih akurat.</string>
    <string name="jud3">Mulai Optimalkan Peternakan Anda</string>
    <string name="des3">Siap untuk membuat peternakan ayam Anda lebih cerdas? Dengan AI.YAM, Anda akan mendapatkan tips pengelolaan, laporan otomatis, dan cara untuk meningkatkan efisiensi peternakan Anda. Yuk, mulai perjalanan ke peternakan modern sekarang juga!</string>
</resources>