<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"
            android:enabled="true"/>

        <item
            android:id="@+id/classificationFragment"
            android:icon="@drawable/baseline_add_a_photo_24"
            android:title="@string/upload"
            android:enabled="true"/>

        <item
            android:id="@+id/historyFragment"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/history"
            android:enabled="true"/>

        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/profile"
            android:enabled="true"/>
    </group>
</menu>
